<resources>
    <string name="app_name">PlaylistMaker</string>
    <string name="app_head">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="night_theme">Темная тема</string>
    <string name="share_link">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="legal">Пользовательское соглашение</string>
    <string name="legal_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="support_email">julia.vakulina1@yandex.ru</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="share_link_text">https://practicum.yandex.ru/android-developer/</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="no_connect">Проблемы со связью</string>
    <string name="no_connect2">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="you_find">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="media_is_empty"><b>Ваша медиатека пуста</b></string>
    <string name="no_playlists"><b>Вы не создали</b></string>
    <string name="no_playlists2"><b>ни одного плейлиста</b></string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="name_playlist">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="dialog_title">Завершить создание плейлиста?</string>
    <string name="dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_finish">Завершить</string>
    <string name="playlist_created">Плейлист "%1$s" создан!</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_track_dialog">Хотите удалить трек?</string>
    <string name="yes_dialog">ДА</string>
    <string name="no_dialog">НЕТ</string>
    <string name="empty_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_playlist_dialog">Хотите удалить плейлист "%s"?</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="dont_have_tracks">В этом плейлисте нет треков</string>
</resources>