<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SettingsLayout"
    android:orientation="vertical">
<Button
    android:id="@+id/new_playlist"
    style="@style/buttonUpdate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/new_playlist"
    android:layout_marginTop="-320dp"
    android:layout_gravity="center"/>
<LinearLayout
    android:id="@+id/placeHolderPlaylists"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_marginTop="-160dp">
    <ImageView
        style="@style/placeHolderNotFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
    <TextView
        style="@style/TextViewSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        android:text="@string/no_playlists"
        android:layout_gravity="center"
        android:textSize="19sp"/>
    <TextView
        style="@style/TextViewSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_playlists2"
        android:textSize="19sp"/>
</LinearLayout>
</FrameLayout>