<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/SettingsLayout"
    tools:context=".settings.ui.SettingsFragment">
    <LinearLayout
        style="@style/StandartHorizontalLayout"
        android:padding="0dp">
        <TextView
            style="@style/SettingsText"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/settings"
            android:textSize="@dimen/text_size_big"
            android:padding="@dimen/button_margin"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp">
        <LinearLayout
            style="@style/StandartHorizontalLayout">
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/themeSwitcher"
                android:text="Темная тема"
                android:layout_gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_little"
                style="@style/SettingsSwitch" />
        </LinearLayout>
        <LinearLayout
            style="@style/StandartHorizontalLayout">
            <TextView
                style="@style/SettingsText"
                android:text="@string/share_link" />
            <Button
                android:id="@+id/buttonShare"
                style="@style/SettingsButton"
                app:icon="@drawable/share"/>
        </LinearLayout>
        <LinearLayout
            style="@style/StandartHorizontalLayout">
            <TextView
                style="@style/SettingsText"
                android:text="@string/support" />
            <Button
                android:id="@+id/buttonSupport"
                style="@style/SettingsButton"
                app:icon="@drawable/support" />
        </LinearLayout>
        <LinearLayout
            style="@style/StandartHorizontalLayout">
            <TextView
                style="@style/SettingsText"
                android:text="@string/legal" />
            <Button
                android:id="@+id/buttonLegal"
                style="@style/SettingsButton"
                app:cornerRadius="0dp"
                app:icon="@drawable/right"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>