<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/SettingsLayout"
    android:orientation="vertical"
    tools:context=".search.ui.SearchFragment">

    <LinearLayout
        android:id="@+id/placeHolderNotFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:visibility="gone">
        <ImageView
            style="@style/placeHolderNotFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <TextView
            style="@style/TextViewSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin"
            android:text="@string/not_found"
            android:textSize="19sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/placeHolderNoConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:visibility="gone"
        android:padding="@dimen/button_margin"
        >
        <ImageView
            style="@style/placeHolderNoConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <TextView
            style="@style/TextViewSearch"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin"
            android:text="@string/no_connect"
            android:textSize="19sp"/>
        <TextView
            android:textAlignment="center"
            style="@style/TextViewSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin"
            android:text="@string/no_connect2"
            android:textSize="19sp"/>
        <Button
            android:id="@+id/buttonUpdate"
            style="@style/buttonUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/button_margin"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/button_margin"
            android:orientation="horizontal"
            android:background="@drawable/rounded_edittext"
            android:layout_marginTop="56dp"
            android:layout_marginHorizontal="@dimen/button_margin">
            <EditText
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:id="@+id/editTextSearch"
                style="@style/SearchEditText"
                android:layout_width="match_parent"
                android:inputType="text"
                android:hint="@string/search"
                android:textColorHint="@color/grey"
                android:lines="1"
                android:textSize="@dimen/text_size_little"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/search"
                android:drawablePadding="8dp"
                android:layout_marginVertical="8dp"/>
            <ImageView
                android:id="@+id/clearIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@drawable/clear"
                android:visibility="gone"
                />
        </FrameLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trackView"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/searchHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/you_find"
            style="@style/TextViewSearch"
            android:textSize="19dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchHistoryView"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/clearHistory"
            style="@style/buttonUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/clear_history"
            android:layout_marginTop="@dimen/button_margin"/>
    </LinearLayout>
    <LinearLayout
        style="@style/StandartHorizontalLayout"
        android:padding="0dp">
        <TextView
            style="@style/SettingsText"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/search"
            android:textSize="@dimen/text_size_big"
            android:padding="@dimen/button_margin"
            />
    </LinearLayout>
    <ProgressBar android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"/>
</FrameLayout>