<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />
    <Button
        android:id="@+id/button_left_track"
        style="@style/SettingsButton"
        app:icon="@drawable/left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/imageTrack_Track"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/button_margin"
        app:srcCompat="@drawable/snake"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/button_left_track"
        app:layout_constraintDimensionRatio="1:1"
        />
    <TextView
        android:id="@+id/nameTrack_Track"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextViewSearch"
        android:textSize="22sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="Yesterday (Remastered 2009)"
        android:layout_marginTop="@dimen/button_margin"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/imageTrack_Track"
        />
    <TextView
        android:id="@+id/artistTrack_Track"
        style="@style/TextViewSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="The Beatles"
        android:layout_marginTop="@dimen/button_margin"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/nameTrack_Track"
        />
    <Button
        android:id="@+id/button_plus_track"
        style="@style/TrackButton"
        android:background="@drawable/round_button"
        app:icon="@drawable/plus"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/artistTrack_Track"/>
    <ImageView
        android:id="@+id/button_play_track"
        style="@style/TrackButtonPlay"
        android:src="@drawable/play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/artistTrack_Track"/>
    <Button
        android:id="@+id/button_favorite_track"
        style="@style/TrackButton"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_button"
        app:icon="@drawable/favorite"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/artistTrack_Track"/>
    <TextView
        android:id="@+id/track_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00"
        style="@style/TextViewSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_play_track"/>

    <TextView
        android:id="@+id/t_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/duration"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/button_play_track"/>
    <TextView
        android:id="@+id/duration"
        style="@style/TextPlayer"
        app:layout_constraintStart_toEndOf="@id/t_duration"
        app:layout_constraintBaseline_toBaselineOf="@id/t_duration"
        android:text="5:35"/>
    <TextView
        android:id="@+id/t_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        android:text="@string/album"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/t_duration"/>
    <TextView
        android:id="@+id/album"
        style="@style/TextPlayer"
        android:maxLines="1"
        app:layout_constraintStart_toEndOf="@id/t_album"
        app:layout_constraintBaseline_toBaselineOf="@id/t_album"
        android:text="Yesterday (Remastestered 2009)"/>
    <TextView
        android:id="@+id/t_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        android:text="@string/year"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/t_album"/>
    <TextView
        android:id="@+id/year"
        style="@style/TextPlayer"
        app:layout_constraintEnd_toEndOf="@id/t_year"
        app:layout_constraintBaseline_toBaselineOf="@id/t_year"
        android:text="1965"/>
    <TextView
        android:id="@+id/t_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        android:text="@string/genre"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/t_year"/>
    <TextView
        android:id="@+id/genre"
        style="@style/TextPlayer"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@id/t_genre"
        app:layout_constraintBaseline_toBaselineOf="@id/t_genre"
        android:text="Rock"/>
    <TextView
        android:id="@+id/t_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        android:text="@string/country"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/genre"/>
    <TextView
        android:id="@+id/country"
        style="@style/TextPlayer"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@id/t_country"
        app:layout_constraintBaseline_toBaselineOf="@id/t_country"
        android:text="Великобритания"/>


</androidx.constraintlayout.widget.ConstraintLayout>